Fix issue with nav on mobile

--- a/pegaworld22/src/customstyles/_layout.scss
+++ b/pegaworld22/src/customstyles/_layout.scss
@@ -23,6 +23,7 @@ app-root {
             max-width: unset;
             width: 100%;
             flex-basis: 100%;
+            min-height: unset;
         }
     }
     main {
